--- a/index.html
+++ b/index.html
@@ -1,12 +1,118 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>SQ1 Academy Store</title>
-    <link rel="stylesheet" href="styles/index.css">
-</head>
-<body>
-    
-</body>
+    <link rel="stylesheet" href="styles/index.css" />
+  </head>
+  <body>
+    <header class="header">
+      <div class="main-header">
+
+        <div class="header-logo-box">
+          <button class="menu-btn">
+            
+            <!-- icono de hamburguesa -->
+            <svg class="header-icon icons-menu"
+              xmlns="http://www.w3.org/2000/svg"
+              fill="none"
+              viewBox="0 0 24 24"
+              stroke-width="1.5"
+              stroke="currentColor"
+              class="size-6"
+            >
+              <path
+                stroke-linecap="round"
+                stroke-linejoin="round"
+                d="M3.75 6.75h16.5M3.75 12h16.5m-16.5 5.25h16.5"
+              />
+            </svg>
+          </button>
+          <!-- logo -->
+          <a href="/index.html">
+            <img
+              src="/assets/images/logo.svg"
+              alt="Square1 Academy Store Logo"
+              width="120"
+              height="37"
+              class="img-logo"
+            />
+          </a>
+        </div>
+
+        <div class="header-icons">
+          <!-- Icono Search -->
+          <a href="#" class="header-icon icons-search">
+            <svg
+              xmlns="http://www.w3.org/2000/svg"
+              fill="none"
+              viewBox="0 0 24 24"
+              stroke-width="1.5"
+              stroke="currentColor"
+              class="icon"
+            >
+              <path
+                stroke-linecap="round"
+                stroke-linejoin="round"
+                d="m21 21-5.197-5.197m0 0A7.5 7.5 0 1 0 5.196 5.196a7.5 7.5 0 0 0 10.607 10.607Z"
+              />
+            </svg>
+          </a>
+
+          <!-- User Profile -->
+          <a href="#" class="header-icon icon-profile">
+            <svg
+              xmlns="http://www.w3.org/2000/svg"
+              fill="none"
+              viewBox="0 0 24 24"
+              stroke-width="1.5"
+              stroke="currentColor"
+              class="icon"
+            >
+              <path
+                stroke-linecap="round"
+                stroke-linejoin="round"
+                d="M15.75 6a3.75 3.75 0 1 1-7.5 0 3.75 3.75 0 0 1 7.5 0ZM4.501 20.118a7.5 7.5 0 0 1 14.998 0A17.933 17.933 0 0 1 12 21.75c-2.676 0-5.216-.584-7.499-1.632Z"
+              />
+            </svg>
+          </a>
+
+          <a href="#" class="header-icon icon-shopping">
+            <svg
+              xmlns="http://www.w3.org/2000/svg"
+              width="24"
+              height="24"
+              viewBox="0 0 24 24"
+              fill="none"
+              stroke="currentColor"
+              stroke-width="2"
+              stroke-linecap="round"
+              stroke-linejoin="round"
+              class="lucide lucide-shopping-basket"
+            >
+              <path d="m15 11-1 9" />
+              <path d="m19 11-4-7" />
+              <path d="M2 11h20" />
+              <path
+                d="m3.5 11 1.6 7.4a2 2 0 0 0 2 1.6h9.8a2 2 0 0 0 2-1.6l1.7-7.4"
+              />
+              <path d="M4.5 15.5h15" />
+              <path d="m5 11 4-7" />
+              <path d="m9 11 1 9" />
+            </svg>
+          </a>
+        </div>
+      </div>
+      <nav class="header-nav">
+        <a href="#" class="nav-item">WOMEN</a>
+        <a href="#" class="nav-item">MEN</a>
+        <a href="#" class="nav-item">KIDS</a>
+        <a href="#" class="nav-item">ACCESORIES</a>
+        <a href="#" class="nav-item">ABOUT US</a>
+        <a href="#" class="nav-item">NEWS</a>
+        <a href="#" class="nav-item">CONTACT US</a>
+      </nav>
+    </header>
+  </body>
 </html>
