--- a/index.html
+++ b/index.html
@@ -9,12 +9,11 @@
   <body>
     <header class="header">
       <div class="main-header">
-
         <div class="header-logo-box">
           <button class="menu-btn">
-            
             <!-- icono de hamburguesa -->
-            <svg class="header-icon icons-menu"
+            <svg
+              class="header-icon icons-menu"
               xmlns="http://www.w3.org/2000/svg"
               fill="none"
               viewBox="0 0 24 24"
@@ -114,5 +113,30 @@
         <a href="#" class="nav-item">CONTACT US</a>
       </nav>
     </header>
+
+    <footer class="footer">
+      <div class="footer-content">
+
+        <a href="/index.html">
+          <img
+            src="/assets/images/logo.svg"
+            alt="Square1 Academy Store Logo"
+            width="90"
+            height="28"
+            class="img-logo"
+          />
+        </a>
+  
+        <nav class="footer-nav">
+          <a href="#" class="nav-item">Support Center</a>
+          <a href="#" class="nav-item">Invoicing</a>
+          <a href="#" class="nav-item">Contract</a>
+          <a href="#" class="nav-item">Careers</a>
+          <a href="#" class="nav-item">Blogs</a>
+          <a href="#" class="nav-item">FAQ,s</a>
+          <a href="#" class="nav-item">Careers</a>
+        </nav>
+      </div>
+    </footer>
   </body>
 </html>
