New Arrivasl and Content Card

--- a/index.html
+++ b/index.html
@@ -114,9 +114,239 @@
       </nav>
     </header>
 
+    <main class="main">
+      <section class="new-arrivals">
+        <div class="new-arrivals-top">
+          <div class="new-arrivals-header">
+            <h2 class="title">New Arrivals</h2>
+            <p class="description">
+              Discover our exciting new arrivals, featuring the latest trends
+              and styles to refresh your wardrobe this season.
+            </p>
+          </div>
+          <nav class="new-arrivals-filters">
+            <button class="filter-btn">Men’s Fashion</button>
+            <button class="filter-btn active">Women’s Fashion</button>
+            <button class="filter-btn">Women Accessories</button>
+            <button class="filter-btn">Men Accessories</button>
+            <button class="filter-btn">Discount Deals</button>
+          </nav>
+          <div class="new-arrivals-filters-select">
+            <label for="new-arrivals-filter">Selecciona una categoria</label>
+            <select name="" id="new-arrivals-filter">
+              <option disabled>Selecciona una categoria</option>
+              <option selected value="">Men’s Fashion</option>
+              <option value="">Women’s Fashion</option>
+              <option value="">Women Accessories</option>
+              <option value="">Men Accessories</option>
+              <option value="">Discount Deals</option>
+            </select>
+          </div>
+        </div>
+        <div class="new-arrivals-bottom">
+          <article class="product-card">
+            <img
+              class="product-card_image"
+              src="//wearoldmoney.com/cdn/shop/products/image_3c93e616-8815-4fcc-a2c4-07595ab6fedd.jpg?v=1699118165&width=750"
+              alt="OLD MONEY Suéter con media cremallera"
+            />
+            <h3 class="product-card_tittle">
+              OLD MONEY Suéter con media cremallera
+            </h3>
+            <span class="product-card_brand">Gucci</span>
+            <div class="product-card_price">
+              <span class="product-card_discount-price">$95.50</span>
+              <!-- valor con descuento -->
+              <span class="product-card_original_price">$95.50</span>
+              <!-- valor con original -->
+            </div>
+            <!-- colores -->
+            <div class="product-card_colors">
+              <button class="product-color" style="background-color: rgb(13, 4, 22);"></button>
+              <button class="product-color" style="background-color: rgb(84, 78, 88);"></button>
+              <button class="product-color" style="background-color: rgb(60, 75, 47);"></button>
+            </div>
+            <button class="product-card_buy">comprar</button>
+          </article>
+          <article class="product-card">
+            <img
+              class="product-card_image"
+              src="https://wearoldmoney.com/cdn/shop/files/old_money_t-shirt_white.jpg"
+              alt="OLD MONEY Suéter con media cremallera"
+            />
+            <h3 class="product-card_tittle">
+              OLD MONEY Suéter con media cremallera
+            </h3>
+            <span class="product-card_brand">Gucci</span>
+            <div class="product-card_price">
+              <span class="product-card_discount-price">$95.50</span>
+              <!-- valor con descuento -->
+              <span class="product-card_original_price">$95.50</span>
+              <!-- valor con original -->
+            </div>
+            <!-- colores -->
+            <div class="product-card_colors">
+              <button class="product-color" style="background-color: rgb(201, 196, 199);"></button>
+              <button class="product-color" style="background-color: rgb(84, 78, 88);"></button>
+              <button class="product-color" style="background-color: rgb(146, 58, 109);"></button>
+            </div>
+            <button class="product-card_buy">comprar</button>
+          </article>
+          <article class="product-card">
+            <img
+              class="product-card_image"
+              src="	https://wearoldmoney.com/cdn/shop/files/016.jpg"
+              alt="OLD MONEY Suéter con media cremallera"
+            />
+            <h3 class="product-card_tittle">
+              OLD MONEY Suéter con media cremallera
+            </h3>
+            <span class="product-card_brand">Gucci</span>
+            <div class="product-card_price">
+              <span class="product-card_discount-price">$95.50</span>
+              <!-- valor con descuento -->
+              <span class="product-card_original_price">$95.50</span>
+              <!-- valor con original -->
+            </div>
+            <!-- colores -->
+            <div class="product-card_colors">
+              <button class="product-color" style="background-color: rgb(0, 0, 0);"></button>
+              <button class="product-color" style="background-color: rgb(84, 78, 88);"></button>
+              <button class="product-color" style="background-color: rgb(40, 61, 129);"></button>
+            </div>
+            <button class="product-card_buy">comprar</button>
+          </article>
+          <article class="product-card">
+            <img
+              class="product-card_image"
+              src="https://wearoldmoney.com/cdn/shop/products/image_0f0a368a-b847-449a-ba87-6d99d70246c2.jpg?v=1702477459&width=700"
+              alt="OLD MONEY Suéter con media cremallera"
+            />
+            <h3 class="product-card_tittle">
+              OLD MONEY Suéter con media cremallera
+            </h3>
+            <span class="product-card_brand">Gucci</span>
+            <div class="product-card_price">
+              <span class="product-card_discount-price">$95.50</span>
+              <!-- valor con descuento -->
+              <span class="product-card_original_price">$95.50</span>
+              <!-- valor con original -->
+            </div>
+            <!-- colores -->
+            <div class="product-card_colors">
+              <button class="product-color" style="background-color: rgb(19, 19, 56);"></button>
+              <button class="product-color" style="background-color: rgb(84, 78, 88);"></button>
+              <button class="product-color" style="background-color: rgb(167, 168, 96);"></button>
+            </div>
+            <button class="product-card_buy">comprar</button>
+          </article>
+          <article class="product-card">
+            <img
+              class="product-card_image"
+              src="	https://wearoldmoney.com/cdn/shop/files/main-image-4.jpg"
+              alt="OLD MONEY Suéter con media cremallera"
+            />
+            <h3 class="product-card_tittle">
+              OLD MONEY Pantalones de sastre
+            </h3>
+            <span class="product-card_brand">Gucci</span>
+            <div class="product-card_price">
+              <span class="product-card_discount-price">$95.50</span>
+              <!-- valor con descuento -->
+              <span class="product-card_original_price">$95.50</span>
+              <!-- valor con original -->
+            </div>
+            <!-- colores -->
+            <div class="product-card_colors">
+              <button class="product-color" style="background-color: rgb(180, 185, 171);"></button>
+              <button class="product-color" style="background-color: rgb(58, 41, 70);"></button>
+              <button class="product-color" style="background-color: rgb(27, 54, 52);"></button>
+            </div>
+            <button class="product-card_buy">comprar</button>
+          </article>
+          <article class="product-card">
+            <img
+              class="product-card_image"
+              src="https://wearoldmoney.com/cdn/shop/files/main-image-2_642464d7-2d50-4167-8f5b-b2c312ae4017.jpg?v=1729550069&width=800"
+              alt="OLD MONEY Pantalones de lana"
+            />
+            <h3 class="product-card_tittle">
+              OLD MONEY Pantalones de lana
+            </h3>
+            <span class="product-card_brand">Gucci</span>
+            <div class="product-card_price">
+              <span class="product-card_discount-price">$95.50</span>
+              <!-- valor con descuento -->
+              <span class="product-card_original_price">$95.50</span>
+              <!-- valor con original -->
+            </div>
+            <!-- colores -->
+            <div class="product-card_colors">
+              <button class="product-color" style="background-color: rgb(0, 0, 0);"></button>
+              <button class="product-color" style="background-color: rgb(51, 80, 107);"></button>
+              <button class="product-color" style="background-color: rgb(40, 82, 129);"></button>
+            </div>
+            <button class="product-card_buy">comprar</button>
+          </article>
+          <article class="product-card">
+            <img
+              class="product-card_image"
+              src="https://wearoldmoney.com/cdn/shop/products/image_d0e50cd8-cf93-4805-bbd1-980d846ccd71.jpg?v=1698421340&width=700"
+              alt="OLD MONEY Pantalón ajustado"
+            />
+            <h3 class="product-card_tittle">
+              OLD MONEY Pantalón ajustado
+            </h3>
+            <span class="product-card_brand">Gucci</span>
+            <div class="product-card_price">
+              <span class="product-card_discount-price">$95.50</span>
+              <!-- valor con descuento -->
+              <span class="product-card_original_price">$95.50</span>
+              <!-- valor con original -->
+            </div>
+            <!-- colores -->
+            <div class="product-card_colors">
+              <button class="product-color" style="background-color: rgb(20, 5, 34);"></button>
+              <button class="product-color" style="background-color: rgb(84, 78, 88);"></button>
+              <button class="product-color" style="background-color: rgb(210, 211, 209);"></button>
+            </div>
+            <button class="product-card_buy">comprar</button>
+          </article>
+          <article class="product-card">
+            <img
+              class="product-card_image"
+              src="https://wearoldmoney.com/cdn/shop/files/main-image-4_f94654af-e753-49df-acd3-4b0acd87a11f.jpg?v=1709469780&width=700"
+              alt="OLD MONEY Pantalón ajustado"
+            />
+            <h3 class="product-card_tittle">
+              OLD MONEY Pantalón ajustado
+            </h3>
+            <span class="product-card_brand">Gucci</span>
+            <div class="product-card_price">
+              <span class="product-card_discount-price">$95.50</span>
+              <!-- valor con descuento -->
+              <span class="product-card_original_price">$95.50</span>
+              <!-- valor con original -->
+            </div>
+            <!-- colores -->
+            <div class="product-card_colors">
+              <button class="product-color" style="background-color: rgb(201, 206, 185);"></button>
+              <button class="product-color" style="background-color: rgb(39, 46, 30);"></button>
+              <button class="product-color" style="background-color: rgb(83, 129, 40);"></button>
+            </div>
+            <button class="product-card_buy">comprar</button>
+          </article>
+        </div>
+        <button class="vie-more_btn">View More</button>
+      </section>
+    </main>
+
+    <div class="banner-container">
+      <img src="./assets/images/banner.png" alt="" class="banner-image">
+    </div>
+
     <footer class="footer">
       <div class="footer-content">
-
         <a href="/index.html">
           <img
             src="/assets/images/logo.svg"
@@ -126,7 +356,7 @@
             class="img-logo"
           />
         </a>
-  
+
         <nav class="footer-nav">
           <a href="#" class="nav-item">Support Center</a>
           <a href="#" class="nav-item">Invoicing</a>
