Summer Season and banners icons

--- a/index.html
+++ b/index.html
@@ -78,28 +78,7 @@
           </a>
 
           <a href="#" class="header-icon icon-shopping">
-            <svg
-              xmlns="http://www.w3.org/2000/svg"
-              width="24"
-              height="24"
-              viewBox="0 0 24 24"
-              fill="none"
-              stroke="currentColor"
-              stroke-width="2"
-              stroke-linecap="round"
-              stroke-linejoin="round"
-              class="lucide lucide-shopping-basket"
-            >
-              <path d="m15 11-1 9" />
-              <path d="m19 11-4-7" />
-              <path d="M2 11h20" />
-              <path
-                d="m3.5 11 1.6 7.4a2 2 0 0 0 2 1.6h9.8a2 2 0 0 0 2-1.6l1.7-7.4"
-              />
-              <path d="M4.5 15.5h15" />
-              <path d="m5 11 4-7" />
-              <path d="m9 11 1 9" />
-            </svg>
+            <img src="./assets/images/basket.png" alt="24/7 Support" >
           </a>
         </div>
       </div>
@@ -343,7 +322,46 @@
 
     <div class="banner-container">
       <img src="./assets/images/banner.png" alt="" class="banner-image">
+      <div class="banner-summer-season">
+        <span class="extra-online">Extra 30% Off Online</span>
+        <h3 class="summer-sale">Summer Season Sale</h3>
+        <p class="summer-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas vel dolor
+          pellentesque, varius elit quis, malesuada quam.</p>
+          <button class="shop-btn">Shop Now</button>
+      </div>
     </div>
+
+    <div class="features-container">
+      <div class="feature-item">
+        <img src="./assets/images/hand.png" alt="High Quality" class="feature-icon">
+        <div class="feature-text">
+          <h3>High Quality</h3>
+          <p>crafted from top materials</p>
+        </div>
+      </div>
+      <div class="feature-item">
+        <img src="./assets/images/medal.png" alt="Warranty Protection" class="feature-icon">
+        <div class="feature-text">
+          <h3>Warranty Protection</h3>
+          <p>Over 2 years</p>
+        </div>
+      </div>
+      <div class="feature-item">
+        <img src="./assets/images/box.png" alt="Free Shipping" class="feature-icon">
+        <div class="feature-text">
+          <h3>Free Shipping</h3>
+          <p>Order over 150 $</p>
+        </div>
+      </div>
+      <div class="feature-item">
+        <img src="./assets/images/phone.png" alt="24/7 Support" class="feature-icon">
+        <div class="feature-text">
+          <h3>24 / 7 Support</h3>
+          <p>Dedicated support</p>
+        </div>
+      </div>
+    </div>
+    
 
     <footer class="footer">
       <div class="footer-content">
