--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
           </a>
 
           <a href="#" class="header-icon icon-shopping">
-            <img src="./assets/images/basket.png" alt="24/7 Support" >
+            <img src="./assets/images/basket.png" alt="24/7 Support" />
           </a>
         </div>
       </div>
@@ -92,6 +92,18 @@
         <a href="#" class="nav-item">CONTACT US</a>
       </nav>
     </header>
+
+    <div class="banner-content">
+      <div class="image-column">
+        <img src="assets/images/image1.png" alt="" />
+      </div>
+
+      <div class="text-column">
+        <span class="this-week">HOT DEALS THIS WEEK</span>
+        <h2>SALE UP 50% MODERN FURNITURE</h2>
+        <button class="column-btn">View now</button>
+      </div>
+    </div>
 
     <main class="main">
       <section class="new-arrivals">
@@ -141,9 +153,18 @@
             </div>
             <!-- colores -->
             <div class="product-card_colors">
-              <button class="product-color" style="background-color: rgb(13, 4, 22);"></button>
-              <button class="product-color" style="background-color: rgb(84, 78, 88);"></button>
-              <button class="product-color" style="background-color: rgb(60, 75, 47);"></button>
+              <button
+                class="product-color"
+                style="background-color: rgb(13, 4, 22)"
+              ></button>
+              <button
+                class="product-color"
+                style="background-color: rgb(84, 78, 88)"
+              ></button>
+              <button
+                class="product-color"
+                style="background-color: rgb(60, 75, 47)"
+              ></button>
             </div>
             <button class="product-card_buy">comprar</button>
           </article>
@@ -165,9 +186,18 @@
             </div>
             <!-- colores -->
             <div class="product-card_colors">
-              <button class="product-color" style="background-color: rgb(201, 196, 199);"></button>
-              <button class="product-color" style="background-color: rgb(84, 78, 88);"></button>
-              <button class="product-color" style="background-color: rgb(146, 58, 109);"></button>
+              <button
+                class="product-color"
+                style="background-color: rgb(201, 196, 199)"
+              ></button>
+              <button
+                class="product-color"
+                style="background-color: rgb(84, 78, 88)"
+              ></button>
+              <button
+                class="product-color"
+                style="background-color: rgb(146, 58, 109)"
+              ></button>
             </div>
             <button class="product-card_buy">comprar</button>
           </article>
@@ -189,9 +219,18 @@
             </div>
             <!-- colores -->
             <div class="product-card_colors">
-              <button class="product-color" style="background-color: rgb(0, 0, 0);"></button>
-              <button class="product-color" style="background-color: rgb(84, 78, 88);"></button>
-              <button class="product-color" style="background-color: rgb(40, 61, 129);"></button>
+              <button
+                class="product-color"
+                style="background-color: rgb(0, 0, 0)"
+              ></button>
+              <button
+                class="product-color"
+                style="background-color: rgb(84, 78, 88)"
+              ></button>
+              <button
+                class="product-color"
+                style="background-color: rgb(40, 61, 129)"
+              ></button>
             </div>
             <button class="product-card_buy">comprar</button>
           </article>
@@ -213,9 +252,18 @@
             </div>
             <!-- colores -->
             <div class="product-card_colors">
-              <button class="product-color" style="background-color: rgb(19, 19, 56);"></button>
-              <button class="product-color" style="background-color: rgb(84, 78, 88);"></button>
-              <button class="product-color" style="background-color: rgb(167, 168, 96);"></button>
+              <button
+                class="product-color"
+                style="background-color: rgb(19, 19, 56)"
+              ></button>
+              <button
+                class="product-color"
+                style="background-color: rgb(84, 78, 88)"
+              ></button>
+              <button
+                class="product-color"
+                style="background-color: rgb(167, 168, 96)"
+              ></button>
             </div>
             <button class="product-card_buy">comprar</button>
           </article>
@@ -225,9 +273,7 @@
               src="	https://wearoldmoney.com/cdn/shop/files/main-image-4.jpg"
               alt="OLD MONEY Suéter con media cremallera"
             />
-            <h3 class="product-card_tittle">
-              OLD MONEY Pantalones de sastre
-            </h3>
+            <h3 class="product-card_tittle">OLD MONEY Pantalones de sastre</h3>
             <span class="product-card_brand">Gucci</span>
             <div class="product-card_price">
               <span class="product-card_discount-price">$95.50</span>
@@ -237,9 +283,18 @@
             </div>
             <!-- colores -->
             <div class="product-card_colors">
-              <button class="product-color" style="background-color: rgb(180, 185, 171);"></button>
-              <button class="product-color" style="background-color: rgb(58, 41, 70);"></button>
-              <button class="product-color" style="background-color: rgb(27, 54, 52);"></button>
+              <button
+                class="product-color"
+                style="background-color: rgb(180, 185, 171)"
+              ></button>
+              <button
+                class="product-color"
+                style="background-color: rgb(58, 41, 70)"
+              ></button>
+              <button
+                class="product-color"
+                style="background-color: rgb(27, 54, 52)"
+              ></button>
             </div>
             <button class="product-card_buy">comprar</button>
           </article>
@@ -249,9 +304,7 @@
               src="https://wearoldmoney.com/cdn/shop/files/main-image-2_642464d7-2d50-4167-8f5b-b2c312ae4017.jpg?v=1729550069&width=800"
               alt="OLD MONEY Pantalones de lana"
             />
-            <h3 class="product-card_tittle">
-              OLD MONEY Pantalones de lana
-            </h3>
+            <h3 class="product-card_tittle">OLD MONEY Pantalones de lana</h3>
             <span class="product-card_brand">Gucci</span>
             <div class="product-card_price">
               <span class="product-card_discount-price">$95.50</span>
@@ -261,9 +314,18 @@
             </div>
             <!-- colores -->
             <div class="product-card_colors">
-              <button class="product-color" style="background-color: rgb(0, 0, 0);"></button>
-              <button class="product-color" style="background-color: rgb(51, 80, 107);"></button>
-              <button class="product-color" style="background-color: rgb(40, 82, 129);"></button>
+              <button
+                class="product-color"
+                style="background-color: rgb(0, 0, 0)"
+              ></button>
+              <button
+                class="product-color"
+                style="background-color: rgb(51, 80, 107)"
+              ></button>
+              <button
+                class="product-color"
+                style="background-color: rgb(40, 82, 129)"
+              ></button>
             </div>
             <button class="product-card_buy">comprar</button>
           </article>
@@ -273,9 +335,7 @@
               src="https://wearoldmoney.com/cdn/shop/products/image_d0e50cd8-cf93-4805-bbd1-980d846ccd71.jpg?v=1698421340&width=700"
               alt="OLD MONEY Pantalón ajustado"
             />
-            <h3 class="product-card_tittle">
-              OLD MONEY Pantalón ajustado
-            </h3>
+            <h3 class="product-card_tittle">OLD MONEY Pantalón ajustado</h3>
             <span class="product-card_brand">Gucci</span>
             <div class="product-card_price">
               <span class="product-card_discount-price">$95.50</span>
@@ -285,9 +345,18 @@
             </div>
             <!-- colores -->
             <div class="product-card_colors">
-              <button class="product-color" style="background-color: rgb(20, 5, 34);"></button>
-              <button class="product-color" style="background-color: rgb(84, 78, 88);"></button>
-              <button class="product-color" style="background-color: rgb(210, 211, 209);"></button>
+              <button
+                class="product-color"
+                style="background-color: rgb(20, 5, 34)"
+              ></button>
+              <button
+                class="product-color"
+                style="background-color: rgb(84, 78, 88)"
+              ></button>
+              <button
+                class="product-color"
+                style="background-color: rgb(210, 211, 209)"
+              ></button>
             </div>
             <button class="product-card_buy">comprar</button>
           </article>
@@ -297,9 +366,7 @@
               src="https://wearoldmoney.com/cdn/shop/files/main-image-4_f94654af-e753-49df-acd3-4b0acd87a11f.jpg?v=1709469780&width=700"
               alt="OLD MONEY Pantalón ajustado"
             />
-            <h3 class="product-card_tittle">
-              OLD MONEY Pantalón ajustado
-            </h3>
+            <h3 class="product-card_tittle">OLD MONEY Pantalón ajustado</h3>
             <span class="product-card_brand">Gucci</span>
             <div class="product-card_price">
               <span class="product-card_discount-price">$95.50</span>
@@ -309,9 +376,18 @@
             </div>
             <!-- colores -->
             <div class="product-card_colors">
-              <button class="product-color" style="background-color: rgb(201, 206, 185);"></button>
-              <button class="product-color" style="background-color: rgb(39, 46, 30);"></button>
-              <button class="product-color" style="background-color: rgb(83, 129, 40);"></button>
+              <button
+                class="product-color"
+                style="background-color: rgb(201, 206, 185)"
+              ></button>
+              <button
+                class="product-color"
+                style="background-color: rgb(39, 46, 30)"
+              ></button>
+              <button
+                class="product-color"
+                style="background-color: rgb(83, 129, 40)"
+              ></button>
             </div>
             <button class="product-card_buy">comprar</button>
           </article>
@@ -321,47 +397,64 @@
     </main>
 
     <div class="banner-container">
-      <img src="./assets/images/banner.png" alt="" class="banner-image">
+      <img src="./assets/images/banner.png" alt="" class="banner-image" />
       <div class="banner-summer-season">
         <span class="extra-online">Extra 30% Off Online</span>
         <h3 class="summer-sale">Summer Season Sale</h3>
-        <p class="summer-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas vel dolor
-          pellentesque, varius elit quis, malesuada quam.</p>
-          <button class="shop-btn">Shop Now</button>
+        <p class="summer-text">
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas vel
+          dolor pellentesque, varius elit quis, malesuada quam.
+        </p>
+        <button class="shop-btn">Shop Now</button>
       </div>
     </div>
 
     <div class="features-container">
       <div class="feature-item">
-        <img src="./assets/images/hand.png" alt="High Quality" class="feature-icon">
+        <img
+          src="./assets/images/hand.png"
+          alt="High Quality"
+          class="feature-icon"
+        />
         <div class="feature-text">
           <h3>High Quality</h3>
           <p>crafted from top materials</p>
         </div>
       </div>
       <div class="feature-item">
-        <img src="./assets/images/medal.png" alt="Warranty Protection" class="feature-icon">
+        <img
+          src="./assets/images/medal.png"
+          alt="Warranty Protection"
+          class="feature-icon"
+        />
         <div class="feature-text">
           <h3>Warranty Protection</h3>
           <p>Over 2 years</p>
         </div>
       </div>
       <div class="feature-item">
-        <img src="./assets/images/box.png" alt="Free Shipping" class="feature-icon">
+        <img
+          src="./assets/images/box.png"
+          alt="Free Shipping"
+          class="feature-icon"
+        />
         <div class="feature-text">
           <h3>Free Shipping</h3>
           <p>Order over 150 $</p>
         </div>
       </div>
       <div class="feature-item">
-        <img src="./assets/images/phone.png" alt="24/7 Support" class="feature-icon">
+        <img
+          src="./assets/images/phone.png"
+          alt="24/7 Support"
+          class="feature-icon"
+        />
         <div class="feature-text">
           <h3>24 / 7 Support</h3>
           <p>Dedicated support</p>
         </div>
       </div>
     </div>
-    
 
     <footer class="footer">
       <div class="footer-content">
