--- a/index.html
+++ b/index.html
@@ -105,6 +105,14 @@
       </div>
     </div>
 
+    <div class="brands">
+      <img src="./assets/images/chanel.png" alt="Chanel">
+      <img src="./assets/images/vuitton.png" alt="Louis Vuitton">
+      <img src="./assets/images/prada.png" alt="Prada">
+      <img src="./assets/images/klein.png" alt="Calvin Klein">
+      <img src="./assets/images/denim.png" alt="Denim">
+    </div>
+
     <main class="main">
       <section class="new-arrivals">
         <div class="new-arrivals-top">
