--- a/product-page.html
+++ b/product-page.html
@@ -6,6 +6,7 @@
     <title>Product Page</title>
     <link rel="stylesheet" href="styles/index.css" />
   </head>
+
   <body>
     <header class="header">
       <div class="main-header">
@@ -101,32 +102,32 @@
           class="small-image"
         />
         <img
-          src="https://scontent-ord5-2.cdninstagram.com/v/t51.75761-15/463927791_17890075092097606_4731305426448727341_n.jpg?stp=dst-jpg_e35_tt6&_nc_cat=111&ccb=1-7&_nc_sid=18de74&_nc_ohc=V7p4y2u7qZwQ7kNvgFFcZwu&_nc_zt=23&_nc_ht=scontent-ord5-2.cdninstagram.com&edm=ANo9K5cEAAAA&_nc_gid=ApPF9xfy9Zbt1VoUIjJTM6L&oh=00_AYBnCufzQMbyNjYMZrwzI_ETMYt1nlpJGHSYRE1yECzwHQ&oe=678CCBA2"
+          src="https://wearoldmoney.com/cdn/shop/files/main-image-1_4620b553-657d-4ead-b0eb-ee33fe91bf2b.jpg?v=1705945350&width=1000"
           alt="small2"
           class="small-image"
         />
         <img
-          src="https://scontent-ord5-3.cdninstagram.com/v/t51.75761-15/463774376_17889596349097606_4164003454226659291_n.jpg?stp=dst-jpg_e35_tt6&_nc_cat=100&ccb=1-7&_nc_sid=18de74&_nc_ohc=0D6qJXp1FwwQ7kNvgGxaURc&_nc_zt=23&_nc_ht=scontent-ord5-3.cdninstagram.com&edm=ANo9K5cEAAAA&_nc_gid=ApPF9xfy9Zbt1VoUIjJTM6L&oh=00_AYA8d9p1AueD9mwmzg9VwRiNwgBzB0AVjDCC_gacBJfFlg&oe=678CC7C2"
+          src="https://wearoldmoney.com/cdn/shop/files/IMG-4556.jpg?v=1713167164&width=800"
           alt="small3"
           class="small-image"
         />
         <img
-          src="https://scontent-ord5-1.cdninstagram.com/v/t39.30808-6/469338817_17895693651097606_4718547299713255646_n.jpg?stp=dst-jpg_e35_tt6&_nc_cat=101&ccb=1-7&_nc_sid=18de74&_nc_ohc=b_1NnlHwvVgQ7kNvgFMuY3Z&_nc_zt=23&_nc_ht=scontent-ord5-1.cdninstagram.com&edm=ANo9K5cEAAAA&_nc_gid=ApPF9xfy9Zbt1VoUIjJTM6L&oh=00_AYD5LmsQhe2zETTFw00u4qhMbDMI7wGTCkDWmRdpb3Asow&oe=678CE1B0"
+          src="https://wearoldmoney.com/cdn/shop/files/IMG-4557.jpg?v=1709161451&width=800"
           alt="small4"
           class="small-image"
         />
         <img
-          src="https://scontent-ord5-3.cdninstagram.com/v/t39.30808-6/469329301_17895693738097606_5418704699660550731_n.jpg?stp=dst-jpg_e35_tt6&_nc_cat=100&ccb=1-7&_nc_sid=18de74&_nc_ohc=xneizZPZO-wQ7kNvgHQwdG0&_nc_zt=23&_nc_ht=scontent-ord5-3.cdninstagram.com&edm=ANo9K5cEAAAA&_nc_gid=ApPF9xfy9Zbt1VoUIjJTM6L&oh=00_AYBwBOmF1lMND0455tsEc0rIIgCYKPo_PmXaaGyzkyu9nw&oe=678CB59F"
+          src="https://wearoldmoney.com/cdn/shop/files/IMG-4555.jpg?v=1713167164&width=800"
           alt="small5"
           class="small-image"
         />
         <img
-          src="https://scontent-ord5-3.cdninstagram.com/v/t51.75761-15/467013856_17893058067097606_4584210283722131283_n.jpg?stp=dst-jpg_e35_tt6&_nc_cat=110&ccb=1-7&_nc_sid=18de74&_nc_ohc=aGcdesHt3FkQ7kNvgFqfNeJ&_nc_zt=23&_nc_ht=scontent-ord5-3.cdninstagram.com&edm=ANo9K5cEAAAA&_nc_gid=ApPF9xfy9Zbt1VoUIjJTM6L&oh=00_AYATIp32YNkJyUexWZ3A86bJk7HeK64WDyxa9z0ubM0jLw&oe=678CE147"
+          src="https://wearoldmoney.com/cdn/shop/files/main-image-1_8b6e9e69-ac97-4c16-8faf-056bea95ca23.jpg?v=1705941738&width=1000"
           alt="small6"
           class="small-image"
         />
         <img
-          src="https://scontent-ord5-3.cdninstagram.com/v/t51.75761-15/467605116_17893682475097606_3674034102568193332_n.jpg?stp=dst-jpg_e35_tt6&_nc_cat=107&ccb=1-7&_nc_sid=18de74&_nc_ohc=xkpfSI2fzi8Q7kNvgFy7PnS&_nc_zt=23&_nc_ht=scontent-ord5-3.cdninstagram.com&edm=ANo9K5cEAAAA&_nc_gid=ApPF9xfy9Zbt1VoUIjJTM6L&oh=00_AYDQBj3MRRp4bQxszf_Lm4cbchrvyQ3GFs7p_lQPXkoTww&oe=678CEBDF"
+          src="https://wearoldmoney.com/cdn/shop/files/006_2ae361d2-3549-4b43-8331-0c858f6c5a4e.jpg?v=1702477794&width=700"
           alt="small7"
           class="small-image"
         />
