checkout page modified

--- a/product-page.html
+++ b/product-page.html
@@ -162,7 +162,7 @@
         </div>
 
         <div class="rating">★★★★☆ <span>(3)</span></div>
-        <p class="price">
+        <p class="item-price">
           $39.00 <span class="original-price">$59.00</span>
           <span class="discount">SAVE 33%</span>
         </p>
